--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
 title: "Learning about GH Pages"
 author: "Daniel Moscoe"
-description: "An experiment as I learn about GitHub pages and creating a portfolio site."
+description: "An experiment as I learn about GitHub pages and creating a portfolio website."
